--- a/src/components/SearchResults.css
+++ b/src/components/SearchResults.css
@@ -1,6 +1,6 @@
 .search-results-container {
   position: absolute;
-  top: 120px;
+  top: 70px;
   left: 25px;
   z-index: 999;
   width: 350px;
@@ -79,7 +79,7 @@
 
 .result-rating {
   font-size: 12px;
-  color: #1967d2;
+  color: #FFA502; /* Orange */
   font-weight: 500;
 }
 
