--- a/src/components/WelcomeModal.css
+++ b/src/components/WelcomeModal.css
@@ -159,6 +159,7 @@
   font-size: 15px;
   color: #202124;
   transition: all 0.2s;
+  position: relative;
 }
 
 .welcome-language-button:hover {
@@ -213,11 +214,32 @@
   font-size: 15px;
 }
 
+.welcome-language-dropdown-icon {
+  margin-left: auto;
+  font-size: 10px;
+  color: #202124;
+  transition: transform 0.2s;
+}
+
+.welcome-language-container:has(.welcome-language-menu) .welcome-language-dropdown-icon {
+  transform: rotate(180deg);
+}
+
 /* 시작하기 버튼 */
 .welcome-actions {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
   margin-top: 32px;
+}
+
+.welcome-help-text {
+  margin: 0;
+  font-size: 15px;
+  color: #FF5252;
+  line-height: 1.5;
+  text-align: left;
 }
 
 .welcome-start-button {
